test/scc/decl/semantic-errors/000.t
extern void foo(int a);
static void foo(int a);